fix(styles): adjust z-index for edges, edge labels, and nodes to improve layering

--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -349,5 +349,13 @@ pre.mermaid > svg {
 
 .vue-flow__edges,
 .vue-flow__edge-labels {
+    z-index: 2 !important;
+}
+
+.vue-flow__node:not(.vue-flow__node-group) {
+    z-index: 3 !important;
+}
+
+.vue-flow__node-group {
     z-index: 1 !important;
 }
